--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://nrojbwxcqochzwhmmkql.supabase.co/storage/v1/object/sign/coaches-profile-images/Amy%20Nobile%20Messing%20PP.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJjb2FjaGVzLXByb2ZpbGUtaW1hZ2VzL0FteSBOb2JpbGUgTWVzc2luZyBQUC5wbmciLCJpYXQiOjE3NDM1MTU3MzgsImV4cCI6MTc3NTA1MTczOH0.PwNPgngK9J-16-Ab1v7C5_6aSSZrYe2eyJVlz8s-vEE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <title>Career Confidence Quiz</title>
+    <meta name="description" content="Discover your unique dating magic in just 3 minutes and why it explains everything about your dating success." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <title>What's Your Secret Dating Superpower? | Amy Nobile Messing</title>
+    <style>
+      /* Ensure profile image is visible */
+      .coach-profile {
+        display: block !important;
+        position: relative !important;
+        z-index: 30 !important;
+      }
+      
+      .coach-profile img {
+        width: 100% !important;
+        height: 100% !important;
+        object-fit: cover !important;
+        border-radius: 50% !important;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15) !important;
+        border: 4px solid #E5EDEA !important;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
